<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_green"
    tools:context=".presentation.lobby.LobbyFragment">

    <LinearLayout
        android:id="@+id/loginViewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/jsongmyung"
            android:text="@string/check_in"
            android:textColor="@color/main_green"
            android:textSize="36sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jsongmyung"
            android:text="@string/email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jsongmyung"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jsongmyung"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jsongmyung"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/jsongmyung"
            android:text="@string/welcome"
            android:textColor="@color/main_green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signInTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="84dp"
            android:fontFamily="@font/jsongmyung"
            android:text="@string/sign_in_text"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signinViewGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/jsongmyung"
            android:text="@string/check_in"
            android:textColor="@color/main_green"
            android:textSize="36sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jsongmyung"
            android:text="@string/email"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/signinEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jsongmyung"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/jsongmyung"
            android:text="@string/password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/signinPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/jsongmyung"
            android:inputType="textPassword"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signinButton"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/btn_background"
            android:fontFamily="@font/jsongmyung"
            android:text="@string/sign_in"
            android:textColor="@color/main_green"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>